# llllm

./: LICENSE  README.md  pyproject.toml
docs/: product_documentation.md
llllm/: __init__.py  core.py  exceptions.py
llllm/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
llllm/utils/: __init__.py  config.py  input.py  normalize.py
tests/: test_llllm.py
