[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llllm"
version = "0.1.0"
description = "Lightweight Local & Large Language Model Wrapper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "dantbytes" }
]
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["llllm*"]
